fix(slide): fix slide z-index variable

--- a/src/slide/styles/slide.scss
+++ b/src/slide/styles/slide.scss
@@ -4,7 +4,7 @@
     right: 0;
     bottom: 0;
     left: 0;
-    z-index: 1000;
+    z-index: $slide-z-index;
     display: block;
     opacity: 1;
     overflow-x: hidden;
@@ -17,7 +17,7 @@
     overflow-y: auto;
     box-shadow: 0 16px 24px 2px rgba(0, 0, 0, 0.04), 0 6px 30px 5px rgba(0, 0, 0, 0.08),
         0 8px 10px -5px rgba(0, 0, 0, 0.12);
-    z-index: 1000;
+    z-index: $slide-z-index;
 
     .thy-slide-layout {
         display: flex;
